--- a/godot-client/.godot/editor/editor_layout.cfg
+++ b/godot-client/.godot/editor/editor_layout.cfg
@@ -9,18 +9,18 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://lobby/lobby_menu.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://lobby/", "res://game/", "res://game/world3D/", "res://game/target/", "res://game/game3D/", "res://assets/progress-bar/", "res://assets/progress-bar/Scripts/", "res://assets/progress-bar/Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://lobby/lobby_chat/lobby_chat.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://player/", "res://lobby/", "res://lobby/lobby_chat/", "res://game/", "res://game/world3D/", "res://game/world3D/assets/", "res://game/target/", "res://game/game3D/", "res://assets/progress-bar/", "res://assets/progress-bar/Scripts/", "res://assets/progress-bar/Scenes/")
 dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=432
+dock_split_2=-75
 dock_split_3=315
 dock_hsplit_1=0
-dock_hsplit_2=415
-dock_hsplit_3=-493
+dock_hsplit_2=319
+dock_hsplit_3=-296
 dock_hsplit_4=0
 dock_6_selected_tab_idx=0
 dock_3="Scene,Import"
@@ -30,28 +30,27 @@ dock_6="VstChatDock"
 
 [EditorNode]
 
-open_scenes=PackedStringArray()
-current_scene=""
-center_split_offset=-727
-selected_default_debugger_tab_idx=8
+open_scenes=PackedStringArray("res://lobby/lobby_chat/lobby_chat.tscn")
+current_scene="res://lobby/lobby_chat/lobby_chat.tscn"
+center_split_offset=-933
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
-mode="windowed"
-position=Vector2i(3040, 50)
+mode="maximized"
+position=Vector2i(3024, 50)
 size=Vector2i(3808, 2110)
 
 [ScriptEditor]
 
-open_scripts=["res://player/player.gd", "res://world/world.gd"]
-selected_script="res://player/player.gd"
+open_scripts=["res://player/arrow.gd", "res://systems/health_system.gd", "res://lobby/lobby_chat/lobby_chat.gd", "res://main.gd", "res://player/player.gd", "res://game/game3D/player3D/player_3d.gd", "res://player/player_admin.gd", "res://player/UI/player_info_item.gd", "res://player/UI/player_ui.gd", "res://assets/progress-bar/Scripts/progress_bar.gd", "res://game/target/target.gd", "res://world/world.gd"]
+selected_script="res://game/game3D/player3D/player_3d.gd"
 open_help=[]
-script_split_offset=336
+script_split_offset=349
 list_split_offset=424
-zoom_factor=1.1448891
+zoom_factor=1.0733335
 
 [GameView]
 
