--- a/godot-client/.godot/editor/script_editor_cache.cfg
+++ b/godot-client/.godot/editor/script_editor_cache.cfg
@@ -6,8 +6,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 401,
-"scroll_position": 386.0,
+"row": 304,
+"scroll_position": 291.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 50,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 29,
-"scroll_position": 29.0,
+"row": 28,
+"scroll_position": 12.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,16 +45,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 10,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 8,
-"selection_from_line": 16,
-"selection_to_column": 10,
-"selection_to_line": 16,
+"row": 94,
+"scroll_position": 68.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -95,16 +91,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 111,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 111,
-"selection_to_column": 22,
-"selection_to_line": 111,
+"row": 68,
+"scroll_position": 55.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -127,12 +119,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 31,
-"scroll_position": 13.000000000000004,
-"selection": false,
+"row": 8,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 13,
+"selection_from_line": 8,
+"selection_to_column": 30,
+"selection_to_line": 8,
 "syntax_highlighter": "GDScript"
 }
 
@@ -141,11 +137,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 70,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 40,
-"scroll_position": 28.0,
+"row": 87,
+"scroll_position": 78.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -155,12 +151,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
+"row": 21,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 21,
+"selection_to_column": 17,
+"selection_to_line": 21,
 "syntax_highlighter": "GDScript"
 }
 
@@ -200,8 +200,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 83,
-"scroll_position": 0.0,
+"row": 86,
+"scroll_position": 79.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -211,10 +211,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 45,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
+"row": 3,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -253,15 +253,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 118,
+"row": 180,
+"scroll_position": 165.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://game/game3D/player3D/player_3d.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 14,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 20,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 118,
-"selection_to_column": 26,
-"selection_to_line": 118,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
